# QtMultiThread

./: CMakeLists.txt  readme.md
dataCruncher/: CMakeLists.txt  datacontroller.h  datacruncher.cpp  datacruncher.h  datamodel.cpp  datamodel.h  main.qml  sample.h
dataCruncherTimer/: CMakeLists.txt  datacontroller.cpp  datacontroller.h  datacruncher.cpp  datacruncher.h  main.qml
futures/: CMakeLists.txt  MatchesWindow.qml  datacontroller.cpp  datacontroller.h  datacruncher.cpp  datacruncher.h  datamodel.h  main.qml  qml.qrc
runable/: CMakeLists.txt  FpsCounter.qml  datacontroller.cpp  datacontroller.h  datacruncher.cpp  datacruncher.h  main.cpp  qml.qrc  sample.h
waitConditions/: CMakeLists.txt  cruncherthread.cpp  cruncherthread.h  datacontroller.cpp  datacontroller.h  datacruncher.cpp  datacruncher.h  dataminer.cpp  dataminer.h  datamodel.cpp  datamodel.h  datasharing.h  sample.h
workerObject/: CMakeLists.txt  datacontroller.cpp  datacontroller.h  datacruncher.cpp  datacruncher.h  datamodel.cpp
workerThread/: CMakeLists.txt  datacontroller.cpp  datacruncher.cpp  datacruncher.h  datamodel.h  main.cpp  sample.h
